--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,8 @@
               </li>
 
               <li class="nav-item">
-              <a class="nav-link nav-button" href="#"
+              <a class="nav-link nav-button" 
+              routerLink="skills"
               routerLinkActive="active"
               >Skills</a>
               </li>
