adding experience and education pages

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="row home-component">
     <div class="col-md-7 col-sm-12">
         <br><br><br>
@@ -24,7 +25,7 @@
 
 <div class="recommendations-component">
     <h1 class="header-bar">
-       Recommendations
+       Testimonials
     </h1>
     <div class="row" *ngFor="let recommendation of recommendations">
     
@@ -35,4 +36,6 @@
     </div>
     <div class="col-md-2"></div>
     </div>
+</div>
+
 </div>
