--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,8 @@
+<div class="container-fluid">
 <div class="row skills-component">
+    <h1 class="header-bar">
+        SKILLS
+     </h1>
     <div class="col-md-4 skill-box" *ngFor="let skill of skills">
         <img [src]="skill.url" class="skill-gif" [alt]="skill.title">
     </div>
@@ -13,8 +17,5 @@
         </div>
         <span class="title">{{skill.title}}</span>
     </div> -->
-
-
-    
-
+</div>
 </div>
