--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container-fluid" style="padding:0;">
   <app-navbar></app-navbar>
-  <div class="container-fluid" style="padding:0;">
+  <div class="container-fluid" style="padding:0; background-color: #343a40;min-height: 100vh;">
     <router-outlet></router-outlet>
   </div>
+  <!-- <app-footer></app-footer> -->
 </div>
