--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Allura&family=Montserrat&family=Open+Sans:wght@300&display=swap');
+
+webkit-scrollbar-thumb {
+    background: coral;
+    border-radius: 10px;
+    }
+
+    webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px #f5f5f5;
+        border-radius: 10px;
+        }
