--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,14 +23,16 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link nav-button" href="#"
+                <a class="nav-link nav-button"
+                routerLink="education"
                 routerLinkActive="active"
                 >Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-button" href="#"
+                    <a class="nav-link nav-button"
+                    routerLink="experience"
                     routerLinkActive="active"
-                    >Projects</a>
+                    >Experience</a>
                     </li>
 
                     <li class="nav-item">
@@ -39,7 +41,8 @@
                         >Work</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-button" href="#"
+                            <a class="nav-link nav-button" 
+                            routerLink="contact"
                             routerLinkActive="active"
                             >Contact</a>
                             </li>
