--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,10 +1,36 @@
 $bgColor:#343a40;
 $coralColor: #FF7F50;
+$fontFamily:'Montserrat', sans-serif;
 
 .skills-component {
     background: $bgColor;
     padding:1rem;
+    .header-bar{
+        text-align: center;
+        font-size: 42px;
+        letter-spacing: .2rem;
+        text-transform: uppercase;
+        font-family:$fontFamily;
+        color:#fff;
+        cursor:pointer; 
+        text-decoration: none;
+        background-image: linear-gradient(351deg, rgba(218,218,224,1) 0%, rgba(249,249,255,1) 35%, rgba(198,204,205,1) 100%);
+        // background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+        background-position: bottom;
+        background-repeat: no-repeat;
+        background-size:5% 4px;
+        border-radius:53px;
+        transition:background-size 1s ease-in-out;
+        padding-bottom:.7rem;
+        margin:2rem;
     
+    }
+    
+    .header-bar:hover{
+        background-size: 8% 4px;
+        transition:background-size 1s ease-in-out;
+       
+    }
 
     .skill-box {
         // box-shadow: 0 12px 32px #fff;
