Changes to the pages making mobile-first approach

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" style="padding:0;">
+<div class="container-fluid" style="padding:0; overflow: hidden;">
   <app-navbar></app-navbar>
   <div class="container-fluid" style="padding:0; background-color: #343a40;min-height: 100vh;">
     <router-outlet></router-outlet>
