--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -120,3 +120,20 @@ $color: #FF7F50;
         }
     }
 }
+
+@media (max-width:699px){
+    .card {
+        width:100% !important;
+        height: auto !important;
+        // padding:.3rem;
+        margin:0 !important;
+        margin-bottom: 1rem !important;
+       
+        .text {
+            padding:.3rem !important;
+            p {
+                font-size:1.3em !important;
+            }
+        }
+    }
+}
