--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -2,7 +2,7 @@
     <div class="row">
        
         <div class="col-md-2"></div>
-        <div class="col-md-8" style="margin: 4rem 0 4rem 0;">
+        <div class="col-md-8 col-sm-12 justify-content-around" style="margin: 4rem 0 4rem 0;">
             <h1 class="header-bar">
                 Education
              </h1>
