--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,57 +1,47 @@
-    <nav class="navbar navbar-expand-lg bg-dark fixed">
 
-        <div class="container-fluid">
-          <a class="navbar-brand" routerLink="home">Paras Malhotra</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-         
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-buttons">
-              <li class="nav-item">
-                <a class="nav-button nav-link"
-                routerLink="home" routerLinkActive="active" >
-                    Home
-                </a>
-              </li>
-
-              <li class="nav-item">
-              <a class="nav-link nav-button" 
-              routerLink="skills"
-              routerLinkActive="active"
-              >Skills</a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link nav-button"
-                routerLink="education"
-                routerLinkActive="active"
-                >Education</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-button"
-                    routerLink="experience"
-                    routerLinkActive="active"
-                    >Experience</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link nav-button" href="#"
-                        routerLinkActive="active"
-                        >Work</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-button" 
-                            routerLink="contact"
-                            routerLinkActive="active"
-                            >Contact</a>
-                            </li>
-            </ul>
-            
-          </div>
-        </div>
-      </nav>
-
- 
- 
+<nav class="navbar 
+bg-dark navbar-expand-sm
+navbar-expand-md
+navbar-expand-lg
+col-sm-12
+">
+  <div class="container">
    
+     <button class="navbar-toggler
+    " type="button"
+    
+     data-bs-toggle="collapse" 
+    data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" routerLink="home">Paras Malhotra</a>
+   
+
+    <div class="collapse navbar-collapse ml-auto col-sm-12 navbar-collapsing" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 col-sm-12  mb-lg-0 nav-buttons">
+        <li class="nav-item">
+          <a class="nav-button nav-link" routerLink="home" routerLinkActive="active">
+            Home
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link nav-button" routerLink="skills" routerLinkActive="active">Skills</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link nav-button" routerLink="education" routerLinkActive="active">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-button" routerLink="experience" routerLinkActive="active">Experience</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link nav-button" routerLink="contact" routerLinkActive="active">Contact</a>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+</nav>
