--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,5 +1,5 @@
+$fontColor:#FF7F50;
 .navbar {
-    
     color:#fff;
     display:flex;
     padding:2rem;
@@ -41,3 +41,46 @@
 
   
 }
+
+@media (max-width: 480px) {
+    .navbar-brand {
+        font-size:2rem !important;
+        // font-size: 4rem;
+        padding: 0rem !important;
+        }
+    
+        .navbar-collapsing {
+            // background-color:#FF7F50;
+            margin-bottom: 12rem;
+            padding-bottom:1rem;
+        }
+        .navbar-toggler {
+            // visibility: none;
+            // background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+            color: #fff;
+              background-color:#fff
+        }
+}
+@media screen and (max-width: 600px) {
+    .navbar-brand {
+    font-size:2rem !important;
+    // font-size: 4rem;
+    padding: 0rem !important;
+    }
+
+    .navbar-collapsing {
+        // background-color:#FF7F50;
+        margin-bottom: 12rem;
+        padding-bottom:1rem;
+    }
+    .navbar-toggler {
+        display: none !important;
+        // background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+        // color: #fff;
+        //   background-color:#fff
+    }
+    .navbar-toggler-icon {
+        display: none !important;
+    } 
+
+  }
