--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -3,7 +3,7 @@
     <h1 class="header-bar">
         SKILLS
      </h1>
-    <div class="col-md-4 skill-box" *ngFor="let skill of skills">
+    <div class="col-md-3  col-sm-12 col-lg-3 skill-box " *ngFor="let skill of skills">
         <img [src]="skill.url" class="skill-gif" [alt]="skill.title">
     </div>
 
