updated skills section and profile picture

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -145,7 +145,7 @@
                                                         
                                                          <h3 class="roles" style="font-weight: bold;">Description </h3>
                                                          <a [href]="project.gitLink" 
-                                                            class="col-sm-12"
+                                                            class="col-sm-12 gitlink"
                                                          target="_blank">{{project.gitLink}}</a>
                                                         <br>
                                                          <p class="roles">
