--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,14 +5,20 @@
   
       <!-- Social buttons -->
       <ul class="list-unstyled list-inline text-center">
-        <li class="list-item">
+        <li class="list-item" id="top-button">
           <a (click)="takeToTop()" 
+          type="button"
            class="buttontop">
             <span class="fa fa-angle-double-up spanarrow fa-3x">
             </span>
           </a>
         </li>
         <br>
+        <li class="list-inline-item">
+          <a href="https://www.facebook.com/paras.malhotra.5437" type="button" class="button fb">
+            <span class="fa fa-envelope fa-2x spin"></span>
+          </a>
+        </li>
   
         <li class="list-inline-item">
             <a href="https://www.linkedin.com/in/parasmalhotra522/" type="button" class="button fb">
@@ -24,11 +30,6 @@
         <li class="list-inline-item">
           <a href="https://github.com/parasmalhotra522" type="button" class="button fb">
             <span class="fa fa-github fa-2x spin"></span>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a href="https://www.facebook.com/paras.malhotra.5437" type="button" class="button fb">
-            <span class="fa fa-facebook fa-2x spin"></span>
           </a>
         </li>
         <li class="list-inline-item">
