--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,10 +6,11 @@
             <span class="intro-line col-12 col-lg-8">Hey, I'm Paras Malhotra.</span>
             <br><br><br>
             <span class="body-lines">
-                I am a FrontEnd Web Developer building the Front-end for Websites and Web Applications
-                that leads to success of the overall product.
-                I am ready to develop your responsive websites 
-                or web based application with latest
+                I am a Full Stack Web Developer, with a diverse range of skills including Python, 
+                JavaScript (Es6), Node.js, Express.js.
+                Specialized in Front-end development
+                I'm ready to develop responsive websites 
+                or web based applications with cross-browser compatibility with latest
                 web frameworks like 
                 <span class="body-specific">Angular</span>, 
                 <span class="body-specific">React Js</span>.
@@ -25,9 +26,16 @@
             </span>
           
         </article>
+        <a 
+        href="../../assets/PARAS_RESUME.docx"
+        id="download" 
+        download
+        type="button" class="button">
+            <span class="fa fa-arrow-down">&nbsp;</span>Download CV
+          </a>
     </div>
     <!-- <div class="col-md-1 col-sm-1"></div> -->
-    <div class="col-md-4 col-sm-12 col-12 col-lg-4 d-flex justify-content-around">
+    <div class="col-md-5 col-sm-12 col-12 col-lg-5 d-flex justify-content-around">
         <div class="image-container">
              <img [src]="imgUrl" class="my-image rounded-circle" alt="image not found">
  
