--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
   <div class="container-fluid" style="padding:0; background-color: #343a40;min-height: 100vh;">
     <router-outlet></router-outlet>
   </div>
-  <!-- <app-footer></app-footer> -->
+  <app-footer></app-footer>
 </div>
